# ocra-gazebo-plugins

./: CMakeLists.txt  README.md
models/: database.config
models/task_frame/: model.config  task_frame.sdf
models/yarp_camera/: model.config  yarp_camera.sdf
plugins/: CMakeLists.txt
plugins/ocra_gui_plugin/: CMakeLists.txt  OcraGuiPlugin.cc  OcraGuiPlugin.hh
plugins/ocra_task_widget/: CMakeLists.txt  OcraTaskWidget.cc  OcraTaskWidget.hh  TaskConnectionRelay.cc  TaskConnectionRelay.hh
plugins/yarp_camera_control/: CMakeLists.txt  YarpCameraControl.cc  YarpCameraControl.hh
plugins/yarp_model_move/: CMakeLists.txt  YarpModelMove.cc
tests/: CMakeLists.txt
tests/test_yarp_move_plugin/: CMakeLists.txt  YarpModelPluginTest.cc
worlds/: test_ocra_task_widget.world
